--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@tanstack/react-query": "^5.72.2",
+    "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
